--- a/Auth_Service/src/main/resources/application.properties
+++ b/Auth_Service/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+# Server
+spring.application.name=Auth-Service
+server.port=8800
 
+# Data
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
+spring.data.mongodb.database=SpeaGroup
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+
+# Consul Config
+management.security.enabled=false
+management.endpoint.health.show-details=always
+spring.cloud.consul.host=localhost
+spring.cloud.consul.port=8500
+spring.cloud.consul.discovery.instance-id=${spring.application.name}:${random.uuid}
