--- a/Auth_Service/src/main/resources/application.properties
+++ b/Auth_Service/src/main/resources/application.properties
@@ -5,12 +5,23 @@ server.port=8800
 # Data
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
-spring.data.mongodb.database=SpeaGroup
-logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+spring.data.mongodb.database=spea_group
+#spring.datasource.driver-class-name=mongodb.jdbc.MongoDriver
+spring.datasource.username=postgres
+spring.datasource.password=7722
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=TRACE
+
+# JPA
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
 
 # Consul Config
-management.security.enabled=false
-management.endpoint.health.show-details=always
-spring.cloud.consul.host=localhost
-spring.cloud.consul.port=8500
-spring.cloud.consul.discovery.instance-id=${spring.application.name}:${random.uuid}
+#management.security.enabled=false
+#management.endpoint.health.show-details=always
+#spring.cloud.consul.host=localhost
+#spring.cloud.consul.port=8500
+#spring.cloud.consul.discovery.instance-id=${spring.application.name}:${random.uuid}
