--- a/upload_service/src/main/resources/application.properties
+++ b/upload_service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+# Server
+spring.application.name=Upload-Service
+server.port=8801
 
+# Data
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
+spring.data.mongodb.database=spea_group
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=TRACE
