--- a/upload_service/src/main/resources/application.properties
+++ b/upload_service/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 spring.data.mongodb.database=spea_group
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=TRACE
+
+# Consul Config
+#management.security.enabled=false
+#management.endpoint.health.show-details=always
+#spring.cloud.consul.host=localhost
+#spring.cloud.consul.port=8500
+#spring.cloud.consul.discovery.instance-id=${spring.application.name}:${random.uuid}
