consul config run #5600

--- a/auth_service/src/main/resources/application.properties
+++ b/auth_service/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # Server
 spring.application.name=Auth-Service
 server.port=8800
+spring.main.allow-bean-definition-overriding=true
 
 # Data
 spring.data.mongodb.port=27017
@@ -17,8 +18,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
 # Consul Config
-#management.security.enabled=false
-#management.endpoint.health.show-details=always
-#spring.cloud.consul.host=localhost
-#spring.cloud.consul.port=8500
-#spring.cloud.consul.discovery.instance-id=${spring.application.name}:${random.uuid}
+management.security.enabled=false
+management.endpoint.health.show-details=always
+spring.cloud.consul.host=localhost
+spring.cloud.consul.port=8500
+spring.cloud.consul.discovery.instance-id=${spring.application.name}:${random.uuid}
