--- a/upload_service/src/main/resources/application.properties
+++ b/upload_service/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 # Server
 spring.application.name=Upload-Service
 server.port=8801
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 # Data
 spring.data.mongodb.port=27017
