--- a/auth_service/src/main/resources/application.properties
+++ b/auth_service/src/main/resources/application.properties
@@ -9,6 +9,10 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.database=spea_group
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=TRACE
 
+# Kafka
+kafka.server=localhost:9092
+kafka.group-id=0
+
 # Consul Config
 #management.security.enabled=false
 #management.endpoint.health.show-details=always
