--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
     <modules>
         <module>auth_service</module>
         <module>upload_service</module>
+        <module>api_gateway</module>
+        <module>post_service</module>
     </modules>
 
 </project>
