--- a/post_service/src/main/resources/application.properties
+++ b/post_service/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 spring.data.mongodb.database=spea_group
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=TRACE
+
+#kafka
+kafka.server=localhost:9092
+kafka.group-id=0
