Auth Service new ControllerTest #5741

--- a/auth_service/src/main/resources/application.properties
+++ b/auth_service/src/main/resources/application.properties
@@ -13,6 +13,14 @@ logging.level.org.springframework.data.mongodb.core.MongoTemplate=TRACE
 kafka.server=localhost:9092
 kafka.group-id=0
 
+# Email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=khasanof373@gmail.com
+spring.mail.password=Nurislom373
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 # Consul Config
 #management.security.enabled=false
 #management.endpoint.health.show-details=always
