--- a/question_service/src/main/resources/application.properties
+++ b/question_service/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+# Server
+spring.application.name=Question-Service
+server.port=8803
 
+# Data
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
+spring.data.mongodb.database=spea_group
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=TRACE
+
+# Consul Config
+#management.security.enabled=false
+#management.endpoint.health.show-details=always
+#spring.cloud.consul.host=localhost
+#spring.cloud.consul.port=8500
+#spring.cloud.consul.discovery.instance-id=${spring.application.name}:${random.uuid}
