--- a/question_service/pom.xml
+++ b/question_service/pom.xml
@@ -57,11 +57,16 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.khasanof</groupId>
-            <artifactId>post_service</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>3.1.4</version>
         </dependency>
+        <!--        <dependency>-->
+<!--            <groupId>org.khasanof</groupId>-->
+<!--            <artifactId>post_service</artifactId>-->
+<!--            <version>0.0.1-SNAPSHOT</version>-->
+<!--            <scope>compile</scope>-->
+<!--        </dependency>-->
     </dependencies>
 
 </project>
