gateway service update #187

--- a/auth_service/src/main/resources/application.properties
+++ b/auth_service/src/main/resources/application.properties
@@ -21,6 +21,10 @@ spring.mail.password=Nurislom373
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+# Prometheus
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
 # Consul Config
 #management.security.enabled=false
 #management.endpoint.health.show-details=always
