--- a/post_service/pom.xml
+++ b/post_service/pom.xml
@@ -15,6 +15,7 @@
     <description>post_service</description>
     <properties>
         <java.version>17</java.version>
+        <spring-cloud.version>2021.0.4</spring-cloud.version>
     </properties>
     <dependencies>
         <dependency>
